# omni-operator-v1

./: .env.example  .gitignore  README.md  README_EN.md  README_PL.md  docker-compose.yml  pyproject.toml
notebooks/: 00_INFRASTRUCTURE.ipynb  00_INFRASTRUKTURA.ipynb  00_INFRASTRUKTURA_I_SETUP.ipynb  01_MULTIMODALNY_ANALITYK.ipynb  01_MULTIMODAL_ANALYST.ipynb  02_AGENT_COPYWRITER.ipynb  03_FABRYKA_WIDEO.ipynb  03_VIDEO_FACTORY.ipynb  04_PAMIEC_QDRANT.ipynb  04_QDRANT_MEMORY.ipynb  05_DYRYGENT_FASTAPI.ipynb  05_FASTAPI_CONDUCTOR.ipynb  06_DYSTRYBUCJA_MCP.ipynb  06_MCP_DISTRIBUTION.ipynb
src/agents/: analyst.py  copywriter.py  dispatcher.py
src/api/: main.py
src/core/: config.py
src/services/: memory.py  video_engine.py  video_proc.py
web/: next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: MissionControl.tsx
